fix: signin과 signup의 form사이 gap수정

--- a/src/signin.css
+++ b/src/signin.css
@@ -71,9 +71,11 @@ form {
 }
 
 .form {
+ display: flex;
+ flex-direction: column;
   margin: 30px 0;
   width: 100%;
-  gap: 2.4rem;
+  gap: 24px;
 }
 
 .input {
